# which-language-scales-better

./: LICENSE  README.md  docker-compose.yml
golang/: Dockerfile  dockerfile  go.mod  main.go
golang/main/: main.go
java19/: .gitignore  Dockerfile  HELP.md  build.gradle  dockerfile  settings.gradle
java19/src/main/java/com/iso/isoscale/: IsoScaleApplication.java
java19/src/main/java/com/iso/scale/: IsoScaleApplication.java
java19/src/main/resources/: application.yml
java8/: .gitignore  Dockerfile  HELP.md  build.gradle  dockerfile  pom.xml
java8/src/main/java/com/iso/scale/: ScaleApplication.java
java8/src/main/resources/: application.yml
mock-golang-notification-sender/: .gitignore  Dockerfile  go.sum  main.go
mock-java8-notification-sender/: Dockerfile  pom.xml
mock-java8-notification-sender/src/main/resources/: application.yml
mock-notification-sender/: .gitignore  Dockerfile  build.gradle  dockerfile
mock-notification-sender/src/main/java/com/iso/isoscale/: IsoScaleApplication.java
mock-notification-sender/src/main/resources/: application.yml
mock-notification-sender/src/test/java/com/iso/isoscale/: IsoScaleApplicationTests.java
python/: Dockerfile  main.py  requirements.txt
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
test-app/: app.py  test-golang-server.py  test-java19-server.py  test-java19-vs-rust.py  test-java19-with-virtual-tomcat-vs.java-19-default-tomcat.py  test-java8-java19-vs-rust.py  test-java8-server.py  test-python-server.py  test-rust-server.py  utils.py
(+31 files in other folders)
